feat:metodos de atualizacao de token e logout pt01
