# application/routes/user-routers.php
@@ -9,6 +9,8 @@ Route::prefix('/v1/dewtech')->group(function(){
 
     Route::post('/login', [AuthController::class, 'login']);
 
+    Route::post('/logout', [AuthController::class, 'logout']);
+
     Route::prefix('/users')->group(function(){
         Route::get('/', [UserController::class, 'index']);
         Route::post('/', [UserController::class, 'store']);
